--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "husky": {
     "hooks": {
-
+      "pre-commit": "lint-staged --no-verify"
     }
   },
   "lint-staged": {
@@ -59,7 +59,7 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.1.0",
+    "jest": "^24.8.0",
     "jest-css-modules": "^2.0.0",
     "jest-environment-jsdom-fourteen": "^0.1.0",
     "jest-prop-type-error": "^1.1.0",
